# nse-corporate-data

./: .coverage  .gitignore  .industry_cache.json  GEMINI.md  README.md  pref_data.json  pyproject.toml  qip_data.json
.agent/skills/nse-corporate-data/: SKILL.md
.context/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  DESIGN.md  OVERVIEW.md
samples/: insider.json  insider_raw.json  insider_trading_data.json  insider_trading_short.json  pref.json  pref_data.json  pref_raw.json  pref_short.json  qip.json  qip_data.json  qip_raw.json
scripts/: refresh_samples.py
src/further_issue_tracker/: __init__.py  cli.py  fetcher.py  parser.py
src/nse_corporate_data/: __init__.py  cli.py  fetcher.py  further_issues.py  insider.py  parser.py  refine.py  retries.py  shorten.py
tests/: test_cli.py  test_fetcher_temp_dir.py  test_insider.py  test_parser.py
