[project]
name = "nse-corporate-data"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eggmasonvalue"}
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "nse-xbrl-parser",
    "nse[server]>=2.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.1.4",
]

[project.scripts]
nse-corporate-data = "nse_corporate_data.cli:cli"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[tool.uv.sources]
nse-xbrl-parser = { git = "https://github.com/eggmasonvalue/nse-xbrl-parser.git" }
